k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name: my-example-service
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 32768
    targetPort: 80
